--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
